--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,16 +11,18 @@
   .input-field {
     @apply bg-gray-50 outline-none border border-gray-300 focus:border-2 text-sm rounded-lg focus:ring-f-green block w-full p-2.5 focus:border-f-green disabled:bg-gray-200;
   }
-}
+  .title {
+    @apply text-xl md:text-2xl font-bold mb-5;
+  }
 
-.title {
-  @apply text-xl md:text-2xl font-bold mb-5;
-}
+  .form-button {
+    @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 cursor-pointer;
+  }
 
-.form-button {
-  @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 cursor-pointer;
-}
-
-.button {
-  @apply py-1 px-3 rounded-md transition hover:brightness-75 text-white min-w-20;
+  .button {
+    @apply py-1 px-3 rounded-md transition hover:brightness-75 text-white min-w-20;
+  }
+  .header-link {
+    @apply px-5 py-2 hover:bg-gray-100;
+  }
 }
