Gigs pages done with api integrations

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,4 +25,10 @@
   .header-link {
     @apply px-5 py-2 hover:bg-gray-100;
   }
+  .layout {
+    @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 gap-5 my-5;
+  }
+  .warning {
+    @apply py-10 px-5 text-lg rounded-lg bg-orange-500/50 text-white text-center;
+  }
 }
